# rust-midi

./: 080415pianobgm3.mid  090719bgmidea2.mid  Cargo.toml  notes.txt  readme.md  rusticinn-bar-idea2-edit.mid
src/: main.rs
