[package]
name = "rust-midi"
version = "0.1.0"
edition = "2021"
description = "does some stuff with MIDI files :)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["cargo", "unicode", "wrap_help"] }
crossterm = { version = "0.23.2", features = ["serde"] }
midir = "0.8.0"
midly = "0.5.2"
nodi = { version = "0.15.2", features = ["hybrid-sleep", "midir"] }
